append selenium and refactoring